--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,6 @@
             </div>
         </div>
         <!-- Nav Bar End -->
-{% static '
         <!-- Bottom Bar Start -->
         <div class="bottom-bar">
             <div class="container-fluid">
@@ -127,9 +126,11 @@
                         <div class="footer-widget">
                             <h2>Get in Touch</h2>
                             <div class="contact-info">
-                                <p><i class="fa fa-map-marker"></i>123 E Store, Los Angeles, USA</p>
-                                <p><i class="fa fa-envelope"></i>email@example.com</p>
-                                <p><i class="fa fa-phone"></i>+123-456-7890</p>
+                                {% for contact in contact_info %}
+                                <p><i class="fa fa-map-marker"></i>{{contact.address}}</p>
+                                <p><i class="fa fa-envelope"></i>{{contact.email}}</p>
+                                <p><i class="fa fa-phone"></i>{{contact.phone}}</p>
+                                {% endfor %}
                             </div>
                         </div>
                     </div>
