--- a/templates/index.html
+++ b/templates/index.html
@@ -32,18 +32,26 @@
                     </div>
                     <div class="col-md-3">
                         <div class="header-img">
+                            {% for ad in ads %}
+                            {% if ad.rank == 1 %}
                             <div class="img-item">
-                                <img src="img/category-1.jpg" />
+                                <img src="{{ad.image.url}}" />
                                 <a class="img-text" href="">
-                                    <p>Some text goes here that describes the image</p>
+                                    <p>{{ad.title}}</p>
                                 </a>
                             </div>
+                            {% endif %}
+                            {% endfor %}
+                            {% for ad in ads %}
+                            {% if ad.rank == 2 %}
                             <div class="img-item">
-                                <img src="img/category-2.jpg" />
+                                <img src="{{ad.image.url}}" />
                                 <a class="img-text" href="">
-                                    <p>Some text goes here that describes the image</p>
+                                    <p>{{ad.totle}}</p>
                                 </a>
                             </div>
+                            {% endif %}
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
@@ -76,6 +84,7 @@
                             </p>
                         </div>
                     </div>
+
                     <div class="col-lg-3 col-md-6 feature-col">
                         <div class="feature-content">
                             <i class="fa fa-truck"></i>
@@ -112,50 +121,76 @@
         <div class="category">
             <div class="container-fluid">
                 <div class="row">
+                    {% for ad in ads %}
+                    {% if ad.rank == 3 %}
                     <div class="col-md-3">
                         <div class="category-item ch-400">
-                            <img src="img/category-3.jpg" />
+                            <img src="{{ad.image.url}}" />
                             <a class="category-name" href="">
-                                <p>Some text goes here that describes the image</p>
+                                <p>{{ad.title}}</p>
                             </a>
                         </div>
                     </div>
+                    {% endif %}
+                    {% endfor %}
                     <div class="col-md-3">
+                    {% for ad in ads %}
+                    {% if ad.rank == 4 %}
                         <div class="category-item ch-250">
                             <img src="img/category-4.jpg" />
                             <a class="category-name" href="">
                                 <p>Some text goes here that describes the image</p>
                             </a>
                         </div>
+                        {% endif %}
+                        {% endfor %}
+
+                    {% for ad in ads %}
+                    {% if ad.rank == 5 %}
                         <div class="category-item ch-150">
                             <img src="img/category-5.jpg" />
                             <a class="category-name" href="">
                                 <p>Some text goes here that describes the image</p>
                             </a>
                         </div>
+                        {% endif %}
+                        {% endfor %}
                     </div>
                     <div class="col-md-3">
+                    {% for ad in ads %}
+                    {% if ad.rank == 6 %}
                         <div class="category-item ch-150">
-                            <img src="img/category-6.jpg" />
+                            <img src="{{ad.image.url}}" />
                             <a class="category-name" href="">
-                                <p>Some text goes here that describes the image</p>
+                                <p>{{ad.title}}</p>
                             </a>
                         </div>
+                        {% endif %}
+                        {% endfor %}
+
+                    {% for ad in ads %}
+                    {% if ad.rank == 7 %}
                         <div class="category-item ch-250">
-                            <img src="img/category-7.jpg" />
+                            <img src="{{ad.image.url}}" />
                             <a class="category-name" href="">
-                                <p>Some text goes here that describes the image</p>
+                                <p>{{ad.title}}</p>
                             </a>
                         </div>
+                       {% endif %}
+                        {% endfor %}
                     </div>
+                    {% for ad in ads %}
+                    {% if ad.rank == 8 %}
                     <div class="col-md-3">
                         <div class="category-item ch-400">
-                            <img src="img/category-8.jpg" />
+                            <img src="{{ad.image.url}}" />
                             <a class="category-name" href="">
-                                <p>Some text goes here that describes the image</p>
+                                <p>{{ad.title}}</p>
                             </a>
                         </div>
                     </div>
+                    {% endif %}
+                    {% endfor %}
                 </div>
             </div>
         </div>
