--- a/templates/product-detail.html
+++ b/templates/product-detail.html
@@ -111,44 +111,44 @@
                                         </ul>
                                     </div>
                                     <div id="reviews" class="container tab-pane fade">
+                                        {% for revu in product_review %}
                                         <div class="reviews-submitted">
-                                            <div class="reviewer">Phasellus Gravida - <span>01 Jan 2020</span></div>
+                                            <div class="reviewer">{{revu.username}}<span>  &nbsp; {{revu.date}}</span></div>
                                             <div class="ratting">
+                                                {% for i in 1|ljust:revu.rating %}
                                                 <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
+                                                {% endfor %}
                                             </div>
                                             <p>
-                                                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+                                                {{revu.review}}
                                             </p>
                                         </div>
+                                        {% endfor %}
                                         {% if user.is_authenticated %}
+                                        <form method = "POST" action = "/product_review/{{product.slug}}">
+                                            {% csrf_token %}
                                         <div class="reviews-submit">
                                             <h4>Give your Review:</h4>
                                             <div class="ratting">
-                                                <i class="far fa-star"></i>
-                                                <i class="far fa-star"></i>
-                                                <i class="far fa-star"></i>
-                                                <i class="far fa-star"></i>
-                                                <i class="far fa-star"></i>
+                                                <select name="rating" id="rating">
+                                                  <option value="5">5</option>
+                                                  <option value="4">4</option>
+                                                  <option value="3">3</option>
+                                                  <option value="2">2</option>
+                                                    <option value="1">1</option>
+                                                </select>
                                             </div>
                                             <div class="row form">
-                                                <div class="col-sm-6">
-                                                    <input type="text" placeholder="Name">
-                                                </div>
-                                                <div class="col-sm-6">
-                                                    <input type="email" placeholder="Email">
+
+                                                <div class="col-sm-12">
+                                                    <textarea name = "review" placeholder="Review"></textarea>
                                                 </div>
                                                 <div class="col-sm-12">
-                                                    <textarea placeholder="Review"></textarea>
-                                                </div>
-                                                <div class="col-sm-12">
-                                                    <button>Submit</button>
+                                                    <button type = "submit" >Submit</button>
                                                 </div>
                                             </div>
                                         </div>
+                                        </form>
                                         {% endif %}
                                     </div>
                                 </div>
